--- a/sensors/security.yaml
+++ b/sensors/security.yaml
@@ -77,7 +77,7 @@
           {% elif user == '2' %}
             Unlocked by Megs
           {% elif user == '3' %}
-            Unlocked by Angelica
+            Unlocked by Housekeeper
           {% elif user == '4' %}
             Unlocked by Dog Sitter
           {% else %}
