--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,7 +12,7 @@ homeassistant:
   customize: !include customize.yaml
   packages: !include_dir_named packages
   customize_glob: !include customize_glob.yaml
-#  customize_domain:
+  customize_domain: !include customize_domain.yaml
 
 #####################################################################
 ### ZONE CONFIG
@@ -53,34 +53,22 @@ zwave:
   config_path: /srv/hass/hass_venv/lib/python3.4/site-packages/libopenzwave-0.3.1-py3.4-linux-armv7l.egg/config
   polling_interval: 60000
 
-## 0.39 syntax ###
 ## Device config
+  device_config:
+    cover.somfy_unknown_type5a52_id5401_switch_39_0:
+      ignored: true
+    cover.somfy_unknown_type5a52_id5402_switch_37_0:
+      ignored: true
+
+## Domain config
 #  device_config_domain:
-#    lock:
-#      polling_intensity: 1
+
 
 ## Global config
   device_config_glob:
     "light.ge_12724_3way_dimmer_switch_*":
       refresh_value: true
       delay: 5
-
-### pre-0.39 syntax
-#  customize:
-### Master Bedroom Chandelier
-#    light.ge_12724_3way_dimmer_switch_level_8_0:
-#      refresh_value: true
-#      delay: 5
-### Kitchen Lights
-#    light.ge_12724_3way_dimmer_switch_level_33_0:
-#      refresh_value: true
-#      delay: 5
-### Dining Room Chandelier
-#    light.ge_12724_3way_dimmer_switch_level_34_0:
-#      refresh_value: true
-#      delay: 5
-
-
 
 #####################################################################
 ### HTTP CONFIG
@@ -94,6 +82,8 @@ http:
     - !secret network_2
     - !secret network_3
     - !secret network_4
+  ip_ban_enabled: true
+  login_attempts_threshold: 5
 
 #####################################################################
 ### IOS CONFIG
@@ -167,15 +157,16 @@ frontend:
 logger:
   default: error
   logs:
-#    homeassistant.components.device_tracker: debug
     homeassistant.components.camera: critical
-#    homeassistant.components.group: debug
-    homeassistant.components.sensor: critical
-#    homeassistant.components.media_player: debug
     homeassistant.components.switch: debug
     homeassistant.components.automation: debug
+    homeassistant.components.script: debug
+    homeassistant.components.cover: debug
+#    homeassistant.components.device_tracker: debug
+#    homeassistant.components.group: debug
+#    homeassistant.components.sensor: debug
+#    homeassistant.components.media_player: debug
 #    homeassistant.components.notify: debug
-#    homeassistant.components.script: debug
 #    homeassistant.components.scene: debug
 
 #####################################################################
@@ -183,11 +174,11 @@ logger:
 #####################################################################
 
 recorder:
-  purge_days: 3
+  db_url: !secret recorder_db_url
+  purge_days: 5
   exclude:
     domains:
       - camera
-      - sensor
       - media_player
       - notify
 
@@ -201,18 +192,45 @@ history:
   exclude:
     domains:
       - camera
-      - climate
-      - device_tracker
-      - input_boolean
       - input_select
       - input_slider
       - media_player
-      - sensor
       - zwave
 
-
-
-#    entities:
+    entities:
+      - sensor.date__time
+      - sensor.megs_eta
+      - sensor.ricks_eta
+      - sensor.megs_eta_home
+      - sensor.rick_eta_home
+      - sensor.dark_sky_cloud_coverage
+      - sensor.dark_sky_daily_summary
+      - sensor.dark_sky_nearest_storm_distance
+      - sensor.pws_temp_f
+      - sensor.pws_feelslike_string
+      - sensor.pws_precip_today_string
+      - sensor.pws_wind_string
+      - sensor.pws_wind_dir
+      - sensor.pws_heat_index_string
+      - sensor.pws_relative_humidity
+      - sensor.pws_dewpoint_string
+      - sensor.pws_pressure_in
+      - sensor.pws_pressure_mb
+      - sensor.pws_solarradiation
+      - sensor.pws_uv
+      - sensor.pws_observation_time
+      - sensor.pws_visibility_mi
+#      - automation.persistence_publish
+      - automation.random_flux_rgb
+      - automation.rgb_blue
+      - automation.rgb_cool
+      - automation.rgb_cyan
+      - automation.rgb_green
+      - automation.rgb_off
+      - automation.rgb_pink
+      - automation.rgb_red
+      - automation.rgb_violet
+      - automation.rgb_yellow
 
 #####################################################################
 ### LOGBOOK
