--- a/scripts/mbr_chandelier.yaml
+++ b/scripts/mbr_chandelier.yaml
@@ -1,6 +1,28 @@
+#####################################################################
+### Master Bedroom Chandelier - Night Time Mode
+#####################################################################
+
 master_bedroom_night_time:
   sequence:
   - service: light.turn_on
     data:
       entity_id: light.ge_12724_3way_dimmer_switch_level_8_0
       brightness: 50
+
+#####################################################################
+### Master Bedroom Chandelier - Night Light; 7 min timer
+#####################################################################
+
+mbr_night_light:
+  alias: "Night Light"
+  sequence:
+  - service: light.turn_on
+    data:
+      entity_id: light.ge_12724_3way_dimmer_switch_level_8_0
+      brightness: 48
+
+  - delay:
+      minutes: 7
+
+  - service: light.turn_off
+    entity_id: light.ge_12724_3way_dimmer_switch_level_8_0
