--- a/scripts/tv_living_room_entertainment.yaml
+++ b/scripts/tv_living_room_entertainment.yaml
@@ -1,4 +1,17 @@
 #####################################################################
+### Power Off TV
+#####################################################################
+
+tv_power_off:
+  sequence:
+
+  - service: switch.turn_off
+    entity_id: switch.tv_power
+
+  - service: switch.turn_off
+    entity_id: switch.directv_power
+
+#####################################################################
 ### Watch DirecTV - Power on TV
 #####################################################################
 
